# mipt-diploma

./: README.md
worker-service/: .dockerignore  Dockerfile.service  Dockerfile.standalone  README.md  pyproject.toml  pyvenv.cfg  service.py  standalone.py
worker-service/assets/inputs/frames/: running.json
worker-service/config/: config.yml  pipeline.looped.yml  pipeline.yml  service.yml
worker-service/models/models--Qwen--Qwen-Image-Edit-2509/refs/: main
worker-service/models/models--ovedrive--Qwen-Image-Edit-2509-4bit/refs/: main
worker-service/src/: IO.py  Service.py  Standalone.py
worker-service/src/app/: __init__.py  add.py  animate.py  cancellation.py  delete.py  norm_map.py  rmbg.py  stand.py  ticket.py
worker-service/src/app/port/: character.py  frames.py  task.py  ticket.py
worker-service/src/cli/: service.py  standalone.py
worker-service/src/config/: __init__.py  _common.py  service_v1.py  standalone_v1.py
worker-service/src/domain/: Pipe.py
worker-service/src/domain/model/: Character.py  Frames.py  Loop.py  __init__.py
worker-service/src/domain/pipeline/: __init__.py  _cycle_detection.py  _qwen_image_edit_base_2.py  _wan_animate_pipeline.py  add.py  animate.py  delete.py  norm_map.py  rmbg.py  stand.py
worker-service/src/domain/worker/: Worker.py  __init__.py
worker-service/src/infra/kafka/: KafkaConsumer.py  KafkaController.py  (+1 more)
worker-service/src/metrics/: __init__.py
worker-service/tests/: conftest.py
worker-service/tests/app/: test_cancellation.py
worker-service/tests/config/: test_service_v1.py  test_standalone_v1.py
(+139 files in other folders)
