[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mipt-diploma"
version = "0.1.0"
description = "Worker service for ML pipelines (standalone and Kafka/S3-backed modes)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # ML core - both modes
    "diffusers>=0.37.1",
    "einops>=0.8.0",
    "ftfy>=6.3.1",
    "huggingface-hub>=1.13.0",
    "pillow>=12.1.1",
    "regex>=2024.11.6",
    "torch>=2.11.0",
    "transformers>=5.7.0",
    # Common runtime
    "argcomplete>=3.6.3",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "structlog>=25.5.0",
    "typing-extensions>=4.15.0",
]

[project.optional-dependencies]
standalone = [
    "aiofiles>=25.1.0",
    "rich>=15.0.0",
]
service = [
    "aioboto3>=15.5.0",
    "aiokafka>=0.13.0",
    "httpx>=0.28.1",
    "prometheus-client>=0.25.0",
    "proto-worker-service",
]

[project.scripts]
worker-standalone = "src.cli.standalone:main"
worker-service = "src.cli.service:main"

[tool.uv.sources]
proto-worker-service = { path = "../proto/python/worker_service" }

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"standalone.py" = "standalone.py"
"service.py" = "service.py"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"
filterwarnings = [
    "ignore::DeprecationWarning",
]
